--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install dependencies
         run: | 
           python -m pip install --upgrade pip
-          pip intall -r requirements.txt
+          pip install -r requirements.txt
       # Testing code with pytest
       - name: Test with pytest
         run: | 
