--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,9 @@ jobs:
   build-push-gcr:
     name: Build and Push to GCP
     runs-on: ubuntu-latest
+    env:
+      PROJECT_ID: cicd-test-436421
+      IMAGE_NAME: test-image
     steps:
     - name: Checkout
       uses: actions/checkout@v4
@@ -20,12 +23,12 @@ jobs:
     - uses: google-github-actions/setup-gcloud@v1 # Update to v1
       with:
         service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
-        project_id: ${{ secrets.GCP_PROJECT_ID }}  # Use secrets for project ID too
+        project_id: ${{ env.PROJECT_ID }}  # Use secrets for project ID too
         export_default_credentials: true
 
      # Creating a docker image from current dir
     - name: Build Docker Image
-      run: docker build -t test-image:latest .
+      run: docker build -t $IMAGE_NAME:latest .
 
     - name: Configure Docker Client
       run: |-
@@ -36,7 +39,7 @@ jobs:
       env:
         GIT_TAG: v0.1.0
       run: |-
-        docker tag test-image:latest gcr.io/${{secrets.GCP_PROJECTS_ID}}/test-image:latest
-        docker tag test-image:latest gcr.io/${{secrets.GCP_PROJECTS_ID}}/test-image:$GIT_TAG
-        docker push gcr.io/${{secrets.GCP_PROJECT_ID}}/test-image:latest
-        docker push gcr.io/${{secrets.GCP_PROJECT_ID}}/test-image:$GIT_TAG
+        docker tag $IMAGE_NAME:latest gcr.io/$PROJECT_ID/test-image:latest
+        docker tag $IMAGE_NAME:latest gcr.io/$PROJECT_ID/test-image:$GIT_TAG
+        docker push gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
+        docker push gcr.io/$PROJECT_ID/$IMAGE_NAME:$GIT_TAG
