--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,12 +34,12 @@ jobs:
       run: |-
         gcloud auth configure-docker --quiet
 
-  # Push the image to conatiner registry on google cloud
+    # Pushes to container registry
     - name: Push Docker Image to Container Registry (GCR)
       env:
-        GIT_TAG: v0.1.0
+        GIT_TAG: ${{ steps.increment-git-tag.outputs.git-tag }}
       run: |-
-        docker tag $IMAGE_NAME:latest gcr.io/$PROJECT_ID/test-image:latest
-        docker tag $IMAGE_NAME:latest gcr.io/$PROJECT_ID/test-image:$GIT_TAG
+        docker tag $IMAGE_NAME:latest gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
+        docker tag $IMAGE_NAME:latest gcr.io/$PROJECT_ID/$IMAGE_NAME:$GIT_TAG
         docker push gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
         docker push gcr.io/$PROJECT_ID/$IMAGE_NAME:$GIT_TAG
