Added Authentication to google cloud

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,9 +15,17 @@ jobs:
     env:
       PROJECT_ID: cicd-test-436421
       IMAGE_NAME: test-image
+
     steps:
     - name: Checkout
       uses: actions/checkout@v4
+
+
+    # Authenticate to google cloud was never authenticated
+    - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v1
+        with:
+          credentials_json: ${{ secrets.SERVICE_ACCOUNT_KEY }}
 
     # Part for the Google Cloud image configuration, pulled from git secret keys
     - uses: google-github-actions/setup-gcloud@v1 # Update to v1
