--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,10 @@ jobs:
     env:
       PROJECT_ID: cicd-test-436421
       IMAGE_NAME: test-image
+      GAR_LOCATION: us-east1
+      REPOSITORY: test-repo
+      SERVICE: cicd-test
+      REGION: us-east1
 
     steps:
     - name: Checkout
@@ -47,7 +51,23 @@ jobs:
       env:
         GIT_TAG: v0.1.0
       run: |-
-        docker tag $IMAGE_NAME:latest gcr.io/$PROJECT_ID/test-image:latest
-        docker tag $IMAGE_NAME:latest gcr.io/$PROJECT_ID/test-image:$GIT_TAG
-        docker push gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
-        docker push gcr.io/$PROJECT_ID/$IMAGE_NAME:$GIT_TAG
+        docker tag $IMAGE_NAME:latest $REPOSITORY/$PROJECT_ID/test-image:latest
+        docker tag $IMAGE_NAME:latest $REPOSITORY/$PROJECT_ID/test-image:$GIT_TAG
+        docker push $REPOSITORY/$PROJECT_ID/$IMAGE_NAME:latest
+        docker push $REPOSITORY/$PROJECT_ID/$IMAGE_NAME:$GIT_TAG
+
+
+  # Push the image to the cloud run for it to be posted to the web
+
+   - name: Deploy to Cloud Run
+        id: deploy
+        uses: google-github-actions/deploy-cloudrun@v0
+        with:
+          service: ${{ env.SERVICE }}
+          region: ${{ env.REGION }}
+          # NOTE: If using a pre-built image, update the image name here
+          image: ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.SERVICE }}:${{ github.sha }}
+          # NOTE: You can also set env variables here:
+          #  env_vars: |
+          #  NODE_ENV=production
+          #  TOKEN_EXPIRE=6400
