--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,69 +1,66 @@
-# File for deployment from Docker to Google Cloud
-# With build
-name: Google Cloud Deploy
+name: Build and Deploy to Cloud Run
 
-
-# Defines what branch the yaml file will activate on
 on:
   push:
-    branches: [ main ]
+    branches:
+      - branch: [ main ]
+
+env:
+  PROJECT_ID: cicd-test-436421 # TODO: update Google Cloud project id
+  GAR_LOCATION: us-east1 # TODO: update Artifact Registry location
+  REPOSITORY: cicd-testrepo # TODO: update Artifact Registry repository name
+  SERVICE: test-flask-app # TODO: update Cloud Run service name
+  REGION: us-east1 # TODO: update Cloud Run service region
 
 jobs:
-  build-push-gcr:
-    name: Build and Push to GCP
+  deploy:
+    # Add 'id-token' with the intended permissions for workload identity federation
+    permissions:
+      contents: 'read'
+      id-token: 'write'
+
     runs-on: ubuntu-latest
-    env:
-      PROJECT_ID: cicd-test-436421
-      IMAGE_NAME: test-image
-      GAR_LOCATION: us-east4
-      REPOSITORY: cicd-testrepo
-      SERVICE: cicd-test
-      REGION: us-east4
-    
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v2
 
+      
 
-    # Authenticate to google cloud was never authenticated
-    - name: Authenticate to Google Cloud
-      uses: google-github-actions/auth@v1
-      with:
-        credentials_json: ${{ secrets.SERVICE_ACCOUNT_KEY }}
+      # NOTE: Alternative option - authentication via credentials json
+      - name: Google Auth
+         id: auth
+         uses: 'google-github-actions/auth@v0'
+         with:
+           credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+           token_format: 'access_token'
 
-    # Part for the Google Cloud image configuration, pulled from git secret keys
-    - uses: google-github-actions/setup-gcloud@v1 # Update to v1
-      with:
-        service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
-        project_id: ${{ env.PROJECT_ID }}  # Use secrets for project ID too
-        export_default_credentials: true
+      # BEGIN - Docker auth and build (NOTE: If you already have a container image, these Docker steps can be omitted)
 
-     # Creating a docker image from current dir
-    - name: Build Docker Image
-      run: docker build -t $IMAGE_NAME:latest .
+      # Authenticate Docker to Google Cloud Artifact Registry
+      - name: Docker Auth
+        run: |-
+          gcloud auth configure-docker "${{ env.GAR_LOCATION }}-docker.pkg.dev"
 
-    - name: Configure Docker Client
-      run: |-
-        gcloud auth configure-docker --quiet
+      # NOTE: Alternative option - authentication via credentials json
+      # - name: Docker Auth
+      # id: docker-auth
+      # uses: 'docker/login-action@v1'
+      # with:
+      #   registry: ${{ env.GAR_LOCATION }}-docker.pkg.dev
+      #   username: _json_key
+      #   password: ${{ secrets.GCP_CREDENTIALS }}
 
-  # Push the image to conatiner registry on google cloud
-    - name: Push Docker Image to Container Registry (GCR)
-      # Fo some rea
-      env:
-        GIT_TAG: v0.1.0
-      run: |-
-        docker tag $IMAGE_NAME:latest $REPOSITORY/$PROJECT_ID/test-image:latest
-        docker tag $IMAGE_NAME:latest $REPOSITORY/$PROJECT_ID/test-image:$GIT_TAG
-        docker push $REPOSITORY/$PROJECT_ID/$IMAGE_NAME:latest
-        docker push $REPOSITORY/$PROJECT_ID/$IMAGE_NAME:$GIT_TAG
+      - name: Build and Push Container 
+        run: |-
+          docker build -t "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.SERVICE }}:${{ github.sha }}" ./
+          docker push "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.SERVICE }}:${{ github.sha }}"
 
+      # END - Docker auth and build
 
-  # Push the image to the cloud run for it to be posted to the web
-
-    - name: Deploy to Cloud Run
-      id: deploy
-      uses: google-github-actions/deploy-cloudrun@v0
-      with:
+      - name: Deploy to Cloud Run
+        id: deploy
+        uses: google-github-actions/deploy-cloudrun@v0
+        with:
           service: ${{ env.SERVICE }}
           region: ${{ env.REGION }}
           # NOTE: If using a pre-built image, update the image name here
@@ -72,3 +69,7 @@ jobs:
           #  env_vars: |
           #  NODE_ENV=production
           #  TOKEN_EXPIRE=6400
+
+      # If required, use the Cloud Run url output in later steps
+      - name: Show Output
+        run: echo ${{ steps.deploy.outputs.url }}
