--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,5 +71,6 @@ jobs:
           #  TOKEN_EXPIRE=6400
 
       # If required, use the Cloud Run url output in later steps
+      # What is going on 
       - name: Show Output
         run: echo ${{ steps.deploy.outputs.url }}
