--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches: [ main ]
       
-
 env:
   PROJECT_ID: cicd-test-436421 # TODO: update Google Cloud project id
   GAR_LOCATION: us-east1 # TODO: update Artifact Registry location
@@ -24,15 +23,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      
-
-      # NOTE: Alternative option - authentication via credentials json hoepfully
+      # Google Authentication
       - name: Google Auth
         id: auth
         uses: 'google-github-actions/auth@v2'
         with:
           credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
-          
 
       # BEGIN - Docker auth and build (NOTE: If you already have a container image, these Docker steps can be omitted)
 
@@ -41,15 +37,7 @@ jobs:
         run: |-
           gcloud auth configure-docker "${{ env.GAR_LOCATION }}-docker.pkg.dev"
 
-      # NOTE: Alternative option - authentication via credentials json
-      # - name: Docker Auth
-      # id: docker-auth
-      # uses: 'docker/login-action@v1'
-      # with:
-      #   registry: ${{ env.GAR_LOCATION }}-docker.pkg.dev
-      #   username: _json_key
-      #   password: ${{ secrets.GCP_CREDENTIALS }}
-
+      # Build and Push Container 
       - name: Build and Push Container 
         run: |-
           docker build -t "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.SERVICE }}:${{ github.sha }}" ./
@@ -63,14 +51,8 @@ jobs:
         with:
           service: ${{ env.SERVICE }}
           region: ${{ env.REGION }}
-          # NOTE: If using a pre-built image, update the image name here
           image: "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.SERVICE }}:${{ github.sha }}"
-          # NOTE: You can also set env variables here:
-          #  env_vars: |
-          #  NODE_ENV=production
-          #  TOKEN_EXPIRE=6400
 
       # If required, use the Cloud Run url output in later steps
-      # What is going on 
       - name: Show Output
         run: echo ${{ steps.deploy.outputs.url }}
