--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -23,6 +23,24 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      # Tests:
+      - name: Set up Python 
+      # Version of the action for setting up python, not Python Version
+        uses: actions/setup-python@v5
+        with:
+            # Semantic version range syntax or exact version of a python version
+          python-version: '3.12.x'
+      # Installs the requirements of the file
+      - name: Install dependencies
+        run: | 
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      # Testing code with pytest
+      - name: Test with pytest
+        run: | 
+          pip install pytest pytest-cov
+          pytest tests
+
       # Google Authentication
       - name: Google Auth
         id: auth
