--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -41,6 +41,8 @@ jobs:
           pip install pytest pytest-cov
           pytest tests
 
+    # Adding a new comment for test purposes
+
       # Google Authentication
       - name: Google Auth
         id: auth
