Lighweight tag added in repo

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -45,6 +45,7 @@ jobs:
 
     # Adding a new comment for test purposes
     # Adding a new comment for test purposes
+    # Adding a new comment of lightweight test tag purposes
 
       # Google Authentication
       - name: Google Auth
