--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -60,12 +60,24 @@ jobs:
       - name: Docker Auth
         run: |-
           gcloud auth configure-docker "${{ env.GAR_LOCATION }}-docker.pkg.dev"
+      
+      - name: Git Tag Call
+        steps:
+            # Gets the most recent annotated tag
+          - script: VERSION_TAG=`git describe --abbreve=0`
+            displayName: Set the tag name as an env variable
 
       # Build and Push Container 
       - name: Build and Push Container 
+        # Setting up th git tag for the version identifier
+        env:
+          GIT_TAG: $VERSION_TAG
         run: |-
           docker build -t "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.SERVICE }}:${{ github.sha }}" ./
+          docker build -t "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.SERVICE }}:${{ github.sha }}:$GIT_TAG"
           docker push "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.SERVICE }}:${{ github.sha }}"
+          docker push "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.SERVICE }}:${{ github.sha }}:$GIT_TAG"
+
 
       # END - Docker auth and build
 
