--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -62,8 +62,7 @@ jobs:
           gcloud auth configure-docker "${{ env.GAR_LOCATION }}-docker.pkg.dev"
       
       - name: Git Tag Call
-        run: |-
-          VERSION_TAG=`git describe --tags`
+        script: VERSION_TAG=`git describe --tags`
         # Gets the most recent annotated tag
 
       # Build and Push Container 
