--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -62,7 +62,8 @@ jobs:
           gcloud auth configure-docker "${{ env.GAR_LOCATION }}-docker.pkg.dev"
       
       - name: Git Tag Call
-        script: VERSION_TAG=`git describe --tags`
+        run:
+          script: VERSION_TAG=`git describe --tags`
         # Gets the most recent annotated tag
 
       # Build and Push Container 
