--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -62,6 +62,7 @@ jobs:
           gcloud auth configure-docker "${{ env.GAR_LOCATION }}-docker.pkg.dev"
       
       # Chapt gpt solution describe what its doing with notes
+      # added a note
       - name: Git tag call
         run: |-
           git fetch --tags
