--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -62,7 +62,8 @@ jobs:
           gcloud auth configure-docker "${{ env.GAR_LOCATION }}-docker.pkg.dev"
       
       # Chapt gpt solution describe what its doing with notes
-      # added a note
+      # added a note, added another note 
+      # added another note.
       - name: Git tag call
         run: |-
           git fetch --tags
