--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -64,6 +64,7 @@ jobs:
       # Chapt gpt solution describe what its doing with notes
       # added a note, added another note 
       # added another note.
+      # Added another note
       - name: Git tag call
         run: |-
           git fetch --tags
